# RIS

./: .gitignore  README.md  capabilities.md  changelog.md  config.yaml  episodic_memory.jsonl  memory_log.jsonl  pyproject.toml  rebuild_env.sh  requirements.txt  requirements_2.txt  scan_imports.py  semantic_memory.jsonl
data/: episodic_memory.jsonl
src/: api_client.py  architecture.py  assignment.py  classifier.py  config.py  config_loader.py  document_tools.py  embeddings.py  emotion_classifier.py  episodic_memory.py  legacy_model_router.py  llama_server_manager.py  main.py  memory.py  memory_store.py  model_executor.py  model_registry.py  model_router.py  nl_commands.py  parallel_executor.py  project_router.py  prompt_builder.py  retrieval.py  semantic_extractor.py  semantic_memory.py  test_models.py  test_orchestrator.py  vector_store.py
src/gui/: __init__.py  __main__.py  main_window.py  styles.qss  unified_memory_inspector.py
src/ingestion/: __init__.py  background.py  call_graph.py  chunker.py  code_chunker.py  code_scanner.py  dependency_graph.py  embedder.py  extract_metadata.py  extract_text.py  module_metrics.py  pipeline.py  vector_store.py  watcher.py
src/orchestrator/: __init__.py  executor.py  history.py  learned_router.py  lifecycle.py  logging.py  memory_cleaner.py  memory_pipeline.py  orchestrator.py  prompt_builder.py  routing.py  semantic_manager.py
src/reasoning/: literature_reasoner.py  rag_engine.py
src/refactoring/: refactor_engine.py
src/research_intelligence.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
tests/: test_end_to_end.py
(+21 files in other folders)
