[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "research-intelligence"
version = "0.1.0"
description = "Research Intelligence System"
authors = [
    { name = "Omid" }
]
readme = "README.md"
requires-python = ">=3.10"

# These are your top-level packages inside src/
# setuptools will find them automatically
[tool.setuptools]
package-dir = {"" = "src"}
packages = ["gui", "orchestrator", "ingestion"]
